[package]
name = "rustytransfer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures-util = "0.3.31"
just-webrtc = "0.2.0"
reqwest =  { version = "0.12.25", features = ["json", "blocking"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
spake2 = "0.4.0"
tokio = {version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = {version = "0.28.0", features = ["rustls-tls-webpki-roots", "url"] }
url = "2.5.7"
uuid = "1.19.0"
webrtc = "0.14.0"
